# RMV_TASK04-1-

./: README.md
task/: CMakeLists.txt  main.cpp
task/code1/: armordetection.cpp  armordetection.h  main.cpp
task/include/: armordetection.h
task/src/: armordetection.cpp
